--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,18 +4,22 @@
 @import "blocks/advantages.scss";
 @import "blocks/add-product.scss";
 @import "blocks/button.scss";
+@import "blocks/btn-list.scss";
 @import "blocks/catalog.scss";
 @import "blocks/contacts.scss";
 @import "blocks/copyright.scss";
 @import "blocks/description-table.scss";
 @import "blocks/example.scss";
+@import "blocks/form.scss";
 @import "blocks/gift.scss";
 @import "blocks/main-nav.scss";
+@import "blocks/main-menu.scss";
 @import "blocks/page-header.scss";
 @import "blocks/product.scss";
 @import "blocks/products.scss";
 @import "blocks/program.scss";
 @import "blocks/page-footer.scss";
+@import "blocks/page-main.scss";
 @import "blocks/programs.scss";
 @import "blocks/promo.scss";
 @import "blocks/social.scss";
