--- a/source/sass/blocks/add-product.scss
+++ b/source/sass/blocks/add-product.scss
@@ -21,6 +21,19 @@
   position: relative;
 }
 
+@media (min-width: $tablet-width) {
+  .add-product {
+  position: relative;
+  margin-bottom: 80px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .add-product {
+    margin-bottom: 85px;
+  }
+}
+
 .add-product::before {
   content: "";
   position: absolute;
@@ -29,6 +42,18 @@
   top: 14px;
   right: 0;
   background-color: $base-color;
+}
+
+@media(min-width: $tablet-width) {
+  .add-product::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    top: 22px;
+    left: 0;
+    background-color: $base-color;
+  }
 }
 
 .add-product__header {
@@ -44,16 +69,67 @@
   background-color: rgb(255, 255, 255);
 }
 
+@media(min-width: $tablet-width) {
+  .add-product__header {
+    box-sizing: border-box;
+    display: inline-block;
+    font-size: 36px;
+    line-height: 36px;
+    padding: 0 36px 0 36px;
+    margin: 0 auto 80px 30px;
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+@media(min-width: $desktop-width) {
+  .add-product__header {
+    padding: 0 110px;
+    margin: 0 auto 80px;
+  }
+}
+
 .add-product__list {
   list-style: none;
   padding: 0;
   margin: 0 0 37px;
 }
 
+@media(min-width: $tablet-width) {
+  .add-product__list {
+  margin-bottom: 70px;
+  }
+}
+
+@media(min-width: $desktop-width) {
+  .add-product__list {
+    margin-bottom: 0;
+  }
+}
+
 .add-product__item {
   border-top: 1px solid rgb(205, 205, 205);
   display: flex;
   flex-wrap: wrap;
+}
+
+@media(min-width: $tablet-width) {
+  .add-product__item {
+    align-items: baseline;
+    border: 1px solid rgb(230, 230, 230);
+    padding: 0 36px;
+  }
+}
+
+@media(min-width: $desktop-width) {
+  .add-product__item {
+    width: 895px;
+    box-sizing: border-box;
+    padding: 0;
+    border-left: none;
+    border-right: none;
+    align-items: baseline;
+    flex-wrap: nowrap;
+  }
 }
 
 .add-product__item:last-child {
@@ -67,9 +143,28 @@
   font-weight: 400;
   color: rgb(34, 2, 0);
   text-transform: uppercase;
-  margin: 13px 0;
+  margin: 13px 3px;
   width: 100%;
 }
+
+@media(min-width: $tablet-width) {
+  .add-product__title {
+    width: auto;
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 11px;
+    margin-top: 25px;
+  }
+}
+
+@media(min-width: $desktop-width) {
+  .add-product__title {
+    width: 245px;
+    margin-right: 80px;
+    margin-bottom: 25px;
+  }
+}
+
 
 .add-product__count,
 .add-product__price {
@@ -80,77 +175,38 @@
   margin: 0;
 }
 
-.add-product__price {
-  margin: 0 0 0 auto;
-}
-
-.add-product__btn {
-  padding: 10px 0;
-  margin-bottom: 17px;
-  margin-top: 15px;
-  width: 100%;
-}
-
-@media (min-width: $tablet-width) {
-  .add-product {
-    position: relative;
-    margin-bottom: 80px;
-  }
-
-  .add-product::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    top: 22px;
-    left: 0;
-    background-color: $base-color;
-  }
-
-  .add-product__header {
-    box-sizing: border-box;
-    display: inline-block;
-    font-size: 36px;
-    line-height: 36px;
-    padding: 0 30px 0 37px;
-    margin: 0 auto 80px 30px;
-    background-color: rgb(255, 255, 255);
-  }
-
-  .add-product__header::after,
-  .add-product__header::before {
-    display: none;
-  }
-
-  .add-product__list {
-    margin-bottom: 70px;
-  }
-
-  .add-product__item {
-    align-items: baseline;
-    border: 1px solid rgb(230, 230, 230);
-    padding: 0 36px;
-  }
-
-  .add-product__title {
-    width: auto;
-    font-size: 20px;
-    line-height: 20px;
-    margin-bottom: 25px;
-    margin-top: 25px;
-    padding-left: 2px;
-  }
-
+@media(min-width: $tablet-width) {
   .add-product__count,
   .add-product__price {
     font-size: 16px;
     line-height: 20px;
     text-align: right;
   }
+}
 
+
+.add-product__price {
+  margin: 0 0 0 auto;
+}
+
+@media(min-width: $tablet-width) {
   .add-product__price {
     width: 95px;
     margin-left: unset;
+  }
+}
+
+@media(min-width: $desktop-width) {
+  .add-product__price {
+    text-align: left;
+    width: 50px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .add-product__header::after,
+  .add-product__header::before {
+    display: none;
   }
 
   .add-product__count {
@@ -164,42 +220,10 @@
 }
 
 @media (min-width: $desktop-width) {
-  .add-product {
-    margin-bottom: 85px;
-  }
-
-  .add-product__header {
-    padding: 0 40px;
-    margin: 0 auto 80px;
-  }
-
-  .add-product__list {
-    margin-bottom: 0;
-  }
-
-  .add-product__item {
-    width: 895px;
-    box-sizing: border-box;
-    padding: 0;
-    border-left: none;
-    border-right: none;
-    align-items: baseline;
-  }
-
-  .add-product__title {
-    width: 245px;
-    margin-right: 80px;
-  }
-
   .add-product__count {
     text-align: left;
     width: 245px;
     margin-left: unset;
-  }
-
-  .add-product__price {
-    text-align: left;
-    width: 50px;
   }
 
   .add-product__order {
@@ -211,3 +235,28 @@
     margin-left: auto;
   }
 }
+
+.add-product__btn {
+  padding: 10px 0;
+  margin-bottom: 17px;
+  margin-top: 15px;
+  width: 100%;
+}
+
+@media (min-width: $tablet-width) {
+  .add-product__btn {
+    font-size: 16px;
+    margin-bottom: 26px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .add-product__btn {
+    margin-left: auto;
+    margin-bottom: 0;
+    width: 196px;
+    font-size: 16px;
+  }
+}
+
+
