--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,20 +1,85 @@
 .page-header {
-  display: flex;
-  padding: 11px 20px;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+  position: relative;
 }
 
 @media (min-width: $tablet-width) {
   .page-header {
-    padding: 25px 30px;
+    padding: 0 30px;
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 
 @media (min-width: $desktop-width) {
   .page-header {
-    padding: 54px 110px;
+    padding: 0 110px;
+    margin: 52px 0 53px 0;
+  }
+}
+
+.page-header__logo {
+  width: 235px;
+  height: 66px;
+  display: block;
+  margin: 0;
+  padding: 0 20px;
+}
+
+@media (min-width: $tablet-width) {
+  .page-header__logo {
+    padding: 3px 0 0;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .page-header__logo-img {
+    width: 175px;
+    height: 60px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .page-header__logo-img {
+    width: 202px;
+  }
+}
+
+
+
+
+.page-header__logo--link:focus,
+.page-header__logo--link:hover {
+  opacity: 0.8;
+}
+
+.page-header__logo--link:active {
+  opacity: 0.6;
+}
+
+.page-header__nav {
+  display: none;
+}
+
+@media (min-width: $tablet-width) {
+  .page-header__nav {
+    margin-left: auto;
+    display: block;
+  }
+}
+
+
+@media (min-width: $tablet-width) {
+    .page-header__logo-image {
+    width: 174px;
+    margin-top: -3px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__logo-image {
+    width: 200px;
+    margin-top: -5px;
   }
 }
 
@@ -32,7 +97,7 @@
     height: 696px;
     position: absolute;
     right: 0;
-    top: 0;
+    top: -52px;
     width: 50%;
     z-index: -1;
     background-size: auto 697px;
@@ -44,72 +109,6 @@
 (min-width: $desktop-width) and (min-resolution: $retina-dppx) {
   .page-header--index::before {
     background: url(../img/index-background-desktop@2x.jpg);
+    background-size: auto 697px;
   }
-}
-
-.page-header__logo {
-  width: 190px;
-  height: 37px;
-}
-
-@media (min-width: $tablet-width) {
-  .page-header__logo {
-    width: 175px;
-    height: 58px;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .page-header__logo {
-    width: 203px;
-    height: 60px;
-  }
-}
-
-.page-header__toggle {
-  position: relative;
-  z-index: 7;
-  display: inline-block;
-  padding: 0;
-  width: 25px;
-  line-height: 30px;
-  margin-bottom: 6px;
-  background: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-@media (min-width: $tablet-width) {
-  .page-header__toggle {
-    display: none;
-  }
-}
-
-.page-header__toggle span {
-  position: relative;
-  display: inline-block;
-  vertical-align: middle;
-  width: 100%;
-  height: 2px;
-  font-size: 0;
-  color: transparent;
-  background: $title-color;
-}
-
-.page-header__toggle span::after,
-.page-header__toggle span::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background: $title-color;
-}
-
-.page-header__toggle span::after {
-  top: 7px;
-}
-
-.page-header__toggle span::before {
-  top: -7px;
 }
