--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -6,7 +6,7 @@
   color: $title-color;
   display: flex;
   flex-direction: column;
-  padding: 23px 20px 18px;
+  padding: 29px 20px 18px;
   position: relative;
 }
 
@@ -15,7 +15,7 @@
   content: "";
   height: 50px;
   position: absolute;
-  top: 27px;
+  top: 20px;
 }
 
 .program--slim::before {
@@ -58,12 +58,17 @@
 
 @media (min-width: $tablet-width) {
   .program {
-    margin-top: 27px;
     padding: 78px 280px 60px 53px;
   }
 }
 
-@media (min-width: $tablet-width) and (max-width: $desktop-width) {
+@media (min-width: $desktop-width) {
+  .program {
+    padding: 0;
+  }
+}
+
+@media (min-width: $tablet-width) and (max-width: 1299px) {
   .program--slim::before {
     height: 200px;
     left: calc(100% - 260px);
@@ -103,35 +108,29 @@
 }
 
 @media (min-width: $desktop-width) {
-  .program {
-    padding-right: 50px;
-  }
-}
-
-@media (min-width: $desktop-width) {
   .program--slim::before {
-    height: 100px;
-    left: 51px;
-    top: 49px;
-    width: 100px;
+    height: 104px;
+    left: 49px;
+    top: 44px;
+    width: 104px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .program--slim::after {
-    height: 98px;
+    height: 106px;
     left: 65px;
-    top: 40px;
+    top: 37px;
     width: 71px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .program--pro::before {
-    height: 100px;
-    left: 51px;
-    top: 49px;
-    width: 100px;
+    height: 99px;
+    left: 52px;
+    top: 47px;
+    width: 99px;
   }
 }
 
@@ -140,7 +139,7 @@
     height: 58px;
     left: 45px;
     top: 57px;
-    width: 135px;
+    width: 134px;
   }
 }
 
@@ -148,9 +147,7 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 37px;
-  margin-bottom: 30px;
-  margin-left: 72px;
-  margin-top: 10px;
+  margin: 0 0 29px 72px;
   text-transform: uppercase;
 }
 
@@ -158,16 +155,16 @@
   .program__title {
     font-size: 36px;
     line-height: 37px;
-    margin-bottom: 24px;
-    margin-left: 0;
-    margin-top: 0;
+    margin: 0 0 24px 0;
   }
 }
 
 @media (min-width: $desktop-width) {
   .program__title {
-    margin-bottom: 72px;
-    margin-left: 160px;
+    padding-left: 165px;
+    width: auto;
+    margin-bottom: 75px;
+
   }
 }
 
@@ -193,7 +190,10 @@
 
 @media (min-width: $desktop-width) {
   .program__description {
-    margin-bottom: 10px;
+    width: 100%;
+    padding-left: 2px;
+    padding-bottom: 0;
+    margin-bottom: 30px;
   }
 }
 
@@ -204,6 +204,7 @@
   line-height: 16px;
   position: relative;
   text-transform: uppercase;
+  margin-bottom: 4px;
 }
 
 .program__link::after {
@@ -232,6 +233,12 @@
     font-size: 20px;
     line-height: 20px;
   }
+
+@media (min-width: $desktop-width) {
+  .program__link {
+    margin-bottom: 60px;
+  }
+}
 
   .program__link::after {
     margin-left: 23px;
