--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -6,12 +6,14 @@
 @media (min-width: $tablet-width) {
   .programs {
     padding: 0 30px;
+    margin-bottom: 18px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .programs {
     padding: 0 110px;
+    margin-bottom: 50px;
   }
 }
 
@@ -32,11 +34,21 @@
 }
 
 .programs__item {
-  margin-top: 20px;
+  margin-bottom: 19px;
+  box-sizing: border-box;
 }
+
+@media (min-width: $tablet-width) {
+  .programs__item {
+    margin-bottom: 25px;
+  }
+}
+
 
 @media (min-width: $desktop-width) {
   .programs__item {
-    width: 462px;
+    width: 570px;
+    padding-bottom: 62px;
+    padding: 76px 50px 0;
   }
 }
