--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -35,13 +35,18 @@
 
 @media (min-width: $tablet-width) {
   .social__link--vk {
-    top: 2px;
     left: -3px;
   }
 }
 
 .social__link--insta {
   left: -6px;
+}
+
+@media (min-width: $tablet-width) {
+  .social__link--insta {
+    left: -6px;
+  }
 }
 
 .social__link--fb {
