--- a/source/sass/blocks/add-product.scss
+++ b/source/sass/blocks/add-product.scss
@@ -1,21 +1,3 @@
-.add-product__container {
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-@media (min-width: $tablet-width) {
-  .add-product__container {
-    padding: 0 30px;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .add-product__container {
-    display: flex;
-    padding: 0 110px;
-  }
-}
-
 .add-product {
   margin-bottom: 34px;
   position: relative;
@@ -23,7 +5,6 @@
 
 @media (min-width: $tablet-width) {
   .add-product {
-  position: relative;
   margin-bottom: 80px;
   }
 }
@@ -56,6 +37,27 @@
   }
 }
 
+.add-product__container {
+  margin: 0 auto;
+  padding: 0 20px;
+  width: 320px;
+  box-sizing: border-box;
+}
+
+@media (min-width: $tablet-width) {
+  .add-product__container {
+    padding: 0 30px;
+    width: 768px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .add-product__container {
+    padding: 0 40px;
+    width: 1300px;
+  }
+}
+
 .add-product__header {
   padding: 0 20px;
   font-family: "Oswald", "Arial", sans-serif;
@@ -83,10 +85,23 @@
 
 @media(min-width: $desktop-width) {
   .add-product__header {
-    padding: 0 110px;
+    padding: 0 40px;
     margin: 0 auto 80px;
   }
 }
+
+.add-product__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+@media(min-width: $desktop-width) {
+  .add-product__wrapper {
+  display: flex;
+  flex-direction: row;
+}
+}
+
 
 .add-product__list {
   list-style: none;
