--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,16 +1,21 @@
 .advantages__container {
   padding: 0 20px;
+  width: 320px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 @media (min-width: $tablet-width) {
   .advantages__container {
     padding: 0 30px;
+    width: 768px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .advantages__container {
-    padding: 0 110px;
+    padding: 0 40px;
+    width: 1300px;
   }
 }
 
@@ -81,7 +86,7 @@
 @media (min-width: $desktop-width) {
   .advantages__item {
     margin-bottom: 20px;
-    padding: 110px 0 50px;
+    padding: 40px 0 50px;
     width: 245px;
   }
 }
