--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,16 +1,21 @@
 .catalog__container {
   padding: 0 20px;
+  width: 320px;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
 @media (min-width: $tablet-width) {
   .catalog__container {
     padding: 0 30px;
+    width: 768px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .catalog__container {
     padding: 0 40px;
+    width: 1300px;
   }
 }
 
@@ -21,7 +26,7 @@
 
 @media (min-width: $tablet-width) {
   .catalog {
-    padding: 17px 30px 0;
+    padding-top: 17px;
     border: 0;
     margin-bottom: 22px;
   }
@@ -29,7 +34,6 @@
 
 @media (min-width: $desktop-width) {
   .catalog {
-    padding: 0 110px;
     margin-bottom: 34px;
   }
 }
