--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,6 +2,10 @@
   background-color: $bg-color;
 }
 
+.contacts--index {
+  background-color: rgb(255, 255, 255);
+}
+
 @media (min-width: $desktop-width) {
   .contacts {
   position: relative;
@@ -10,26 +14,34 @@
 
 .contacts__header {
   display: flex;
+  padding: 30px 20px 25px;
+  box-sizing: border-box
+}
+
+.contacts__container {
+  display: flex;
   padding: 30px 20px;
+  margin: 0 auto;
   box-sizing: border-box;
+  width: 320px;
 }
 
 @media (min-width: $tablet-width) {
-  .contacts__header {
-      padding: 64px 70px 56px;
+  .contacts__container {
+      padding: 64px 30px 56px;
+      width: 768px;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .contacts__header {
+  .contacts__container {
     position: absolute;
     z-index: 2;
     box-sizing: border-box;
     width: 570px;
     padding: 45px 75px 55px;
-    left: 110px;
+    left: 260px;
     top: 115px;
-    background-color: rgb(255, 255, 255);
   }
 }
 
@@ -94,14 +106,12 @@
   background-repeat: no-repeat;
   background-position: center;
   min-width: 320px;
-  width: 100%;
   height: 365px;
 }
 
 @media (min-width: $tablet-width) {
   .contacts__map {
     background-image: url(../img/bg-map-tablet@1x.png);
-    width: 100%;
     height: 400px;
   }
 }
@@ -115,7 +125,7 @@
 @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
   .contacts__map {
       background-image: url(../img/bg-map-mobile@2x.png);
-      background-size: 320px auto;
+      background-size: 100% auto;
   }
 }
 
@@ -123,7 +133,7 @@
 (min-width: $tablet-width) and (min-resolution: $retina-dppx) {
   .contacts__map {
       background-image: url(../img/bg-map-tablet@2x.png);
-      background-size: 768px auto;
+      background-size: 100% auto;
   }
 }
 
@@ -131,7 +141,7 @@
 (min-width: $desktop-width) and (min-resolution: $retina-dppx) {
   .contacts__map {
       background-image: url(../img/bg-map-desktop@2x.png);
-      background-size: 100%;
+      background-size: 100% auto;
   }
 }
 
