--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -9,23 +9,7 @@
     padding: 0 40px;
     width: 1300px;
     box-sizing: border-box;
-    margin: 0 auto 42px;
-  }
-}
-
-.form__container {
-  padding: 0px 20px;
-}
-
-@media (min-width: $tablet-width) {
-  .form__container {
-    padding: 0 30px;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .form__container {
-    padding: 0 110px;
+    margin: 0 auto 50px;
   }
 }
 
@@ -52,10 +36,10 @@
 
 @media (min-width: $desktop-width) {
   .form__title {
-      padding: 0 40px;
-      margin-bottom: 73px;
+      margin-bottom: 56px;
   }
 }
+
 
 .form__content {
   font-family: "Oswald", "Arial", sans-serif;
@@ -77,7 +61,29 @@
 
 @media (min-width: $desktop-width) {
   .form__content {
+    margin-bottom: 68px;
+  }
+}
+
+
+.form__container {
+  padding: 0px 20px;
+  width: 320px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+@media (min-width: $tablet-width) {
+  .form__container {
+    padding: 0 30px;
+    width: 768px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__container {
     padding: 0 40px;
+    width: 1300px;
   }
 }
 
@@ -95,7 +101,7 @@
 }
 
 @media (min-width: $desktop-width) {
-  .form__list {
+  .form__list-wrapper .form__list {
     width: 570px;
     margin: 0;
     padding: 0;
@@ -109,6 +115,8 @@
 @media (min-width: $tablet-width) {
   .form__list--contacts {
     margin-bottom: 60px;
+    padding-left: 30px;
+    padding-right: 37px;
   }
 }
 
@@ -139,17 +147,21 @@
   margin-bottom: 27px;
 }
 
+.form__list--contacts .form__input-text:invalid+.form__input-icon {
+  fill: #ff8282;
+}
+
 @media (min-width: $tablet-width) {
   .form__list--mass {
     border: 1px solid rgb(230, 230, 230);
-    padding: 24px 40px 10px 44px;
+    padding: 24px 40px 23px 44px;
     width: 630px;
     margin-bottom: 76px;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .form__list--mass {
+  .form__list-wrapper .form__list--mass {
     padding-top: 25px;
     padding-left: 65px;
     padding-bottom: 10px;
@@ -159,6 +171,13 @@
 .form__list--mass .form__label {
   padding-left: 45px;
 }
+
+@media (min-width: $desktop-width) {
+  .form__list--mass .form__label {
+    padding-left: 21px;
+  }
+}
+
 
 .form__list--mass .form__item {
   margin-bottom: 25px;
@@ -180,9 +199,16 @@
   margin-right: 11px;
 }
 
+@media (min-width: $tablet-width) {
+  .form__list--contacts .form__label {
+  margin-right: 4px;
+  }
+}
+
+
 @media (min-width: $desktop-width) {
   .form__list--contacts .form__item {
-      width: 570px;
+      min-width: 570px;
   }
 }
 
@@ -202,6 +228,7 @@
   flex-wrap: wrap;
   margin-bottom: 12px;
   justify-content: space-between;
+  padding-left: 0;
   }
 }
 
@@ -222,7 +249,7 @@
 
 @media (min-width: $tablet-width) {
   .form__list--additional .form__label {
-    padding-left: 47px;
+    padding-left: 79px;
   }
 }
 
@@ -265,6 +292,12 @@
 @media (min-width: $tablet-width) {
   .form__list-border-wrapper {
     border: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__list-border-wrapper {
+     min-width: 570px;
   }
 }
 
@@ -312,14 +345,14 @@
 
 @media (min-width: $tablet-width) {
   .form__label {
-    margin-right: 10px;
+    margin-right: 8px;
   }
 }
 
 @media (min-width: $desktop-width) {
  .form__label {
     padding: 9px 0;
-    margin-right: 18px;
+    margin-right: 35px;
   }
 }
 
@@ -377,7 +410,7 @@
 
 @media (min-width: $tablet-width) {
   .form__list .form__label--checkbox::before {
-    left: 0;
+    left: 20px;
     top: -4px;
     width: 40px;
     height: 40px;
@@ -386,7 +419,7 @@
 
 @media (min-width: $tablet-width) {
   .form__list--contacts .form__label--email {
-  margin-right: 20px;
+  margin-right: 10px;
   }
 }
 
@@ -428,14 +461,14 @@
     width: 18px;
     height: 18px;
     top: 11px;
-    left: -5px;
+    left: -25px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .form__list .form__input-radio:checked+label::after {
     top: 11px;
-    left: -28px;
+    left: -25px;
   }
 }
 
@@ -472,6 +505,13 @@
   border: 1px solid rgba(205, 205, 205, 0.5);
 }
 
+.form__input-text:invalid,
+.form__textarea:invalid {
+  border: 2px solid #ff8282;
+  padding: 11px;
+  box-shadow: none;
+}
+
 @media (min-width: $tablet-width) {
   .form__input-text,
   .form__label {
@@ -486,12 +526,22 @@
   }
 
   .form__input-text:focus,
-  .form__label:focus {
-      padding: 9px;
+  .form__input-text:invalid,
+  .form__label:focus,
+  .form__label:invalid {
+    padding: 9px;
   }
 
+
   .form__input-text {
-      padding-left: 15px;
+      padding-left: 18px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__input-text,
+  .form__label {
+      padding: 10px 0;
   }
 }
 
@@ -510,11 +560,13 @@
 }
 
 @media (min-width: $tablet-width) {
-  .form__textarea:focus {
+  .form__textarea:focus,
+  .form__textarea:invalid {
     padding: 13px 16px;
   }
 
-  .form__input-text:focus {
+  .form__input-text:focus,
+  .form__input-text:invalid {
     padding-left: 14px;
   }
 }
@@ -523,14 +575,16 @@
   .form__input-text--email {
       padding-left: 18px;
   }
-  .form__input-text--email:focus {
-      padding-left: 17px;
+  .form__input-text--email:focus,
+  .form__input-text--email:invalid {
+    padding-left: 17px;
   }
   .form__input-text--phone {
       padding-left: 20px;
   }
-  .form__input-text--phone:focus {
-      padding-left: 19px;
+  .form__input-text--phone:focus,
+  .form__input-text--phone:invalid {
+    padding-left: 19px;
   }
 }
 
@@ -560,7 +614,6 @@
     line-height: 36px;
     margin-bottom: 76px;
     padding: 0 38px;
-    margin-left: 30px;
   }
 }
 
@@ -590,7 +643,7 @@
 
 @media (min-width: $tablet-width) {
   .form__comments-wrapper {
-    padding: 0 70px;
+    padding: 0 40px;
     margin-bottom: 50px;
   }
 }
@@ -603,9 +656,7 @@
 }
 
 .form__fieldset {
-  padding: 0;
   border: 0;
-  margin: 0 auto 5px;
   position: relative;
 }
 
