--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -2,19 +2,28 @@
   position: relative;
 }
 
+.page-header__container {
+  padding: 0 20px;
+  margin: 0 auto;
+  width: 320px;
+  box-sizing: border-box;
+}
 @media (min-width: $tablet-width) {
-  .page-header {
+  .page-header__container {
     padding: 0 30px;
     margin: 20px auto;
+    width: 768px;
     display: flex;
     flex-wrap: wrap;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .page-header {
-    padding: 0 110px;
-    margin: 52px 0 53px 0;
+  .page-header__container {
+    padding: 0 40px;
+    margin-top: 52px;
+    margin-bottom: 65px;
+    width: 1300px;
   }
 }
 
@@ -23,7 +32,6 @@
   height: 66px;
   display: block;
   margin: 0;
-  padding: 0 20px;
 }
 
 @media (min-width: $tablet-width) {
@@ -45,20 +53,17 @@
   }
 }
 
-
-
-
-.page-header__logo--link:focus,
-.page-header__logo--link:hover {
+.page-header__logo:focus,
+.page-header__logo:hover {
   opacity: 0.8;
 }
 
-.page-header__logo--link:active {
+.page-header__logo:active {
   opacity: 0.6;
 }
 
 .page-header__nav {
-  display: none;
+  display: block;
 }
 
 @media (min-width: $tablet-width) {
@@ -93,7 +98,7 @@
   .page-header--index::before {
     content: "";
     background: url(../img/index-background-desktop@1x.jpg) no-repeat;
-    background-color: $base-color;
+    background-color: rgb(100, 168, 59);
     height: 696px;
     position: absolute;
     right: 0;
