--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -22,10 +22,17 @@
 .advantages {
   margin-bottom: 17px;
 }
+
 @media (min-width: $tablet-width) {
   .advantages {
     counter-reset: itemNum;
     margin-bottom: 35px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .advantages {
+    margin-bottom: -30px;
   }
 }
 
@@ -39,7 +46,7 @@
 
 @media (min-width: $tablet-width) {
   .advantages__title {
-    margin: 0 0 70px;
+    margin: 0 0 6px;
     font-size: 60px;
     line-height: 60px;
   }
@@ -61,6 +68,12 @@
   }
 }
 
+@media (min-width: $desktop-width) {
+  .advantages__list {
+    flex-wrap: nowrap;
+  }
+}
+
 .advantages__item {
   align-items: center;
   color: $content-color;
@@ -77,7 +90,8 @@
   .advantages__item {
     font-size: 16px;
     line-height: 24px;
-    margin: 0 0 97px;
+    margin-top: 65px;
+    margin-bottom: 65px;
     padding: 114px 75px 0 0;
     width: 250px;
   }
@@ -86,8 +100,10 @@
 @media (min-width: $desktop-width) {
   .advantages__item {
     margin-bottom: 20px;
-    padding: 40px 0 50px;
     width: 245px;
+    box-sizing: border-box;
+    margin-left: 0px;
+    padding: 110px 0;
   }
 }
 
@@ -134,7 +150,8 @@
   background-image: url(../img/advantage-leaf@1x.png);
 }
 
-@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+@media (min-resolution: $retina-dpi),
+(min-resolution: $retina-dppx) {
   .advantages__item--leaf::before {
     background-image: url(../img/advantage-leaf@2x.png);
     background-size: 60px auto;
@@ -145,7 +162,8 @@
   background-image: url(../img/advantage-powder@1x.png);
 }
 
-@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+@media (min-resolution: $retina-dpi),
+(min-resolution: $retina-dppx) {
   .advantages__item--powder::before {
     background-image: url(../img/advantage-powder@2x.png);
     background-size: 60px auto;
@@ -156,7 +174,8 @@
   background-image: url(../img/advantage-dining@1x.png);
 }
 
-@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+@media (min-resolution: $retina-dpi),
+(min-resolution: $retina-dppx) {
   .advantages__item--dining::before {
     background-image: url(../img/advantage-dining@2x.png);
     background-size: 60px auto;
@@ -167,9 +186,20 @@
   background-image: url(../img/advantage-clock@1x.png);
 }
 
-@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+@media (min-resolution: $retina-dpi),
+(min-resolution: $retina-dppx) {
   .advantages__item--clock::before {
     background-image: url(../img/advantage-clock@2x.png);
     background-size: 60px auto;
+  }
+}
+
+.advantages__item br {
+  display: none;
+}
+
+@media (min-width: $tablet-width) {
+  .advantages__item br {
+    display: block;
   }
 }
