--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -8,7 +8,7 @@
 
 @media (min-width: $desktop-width) {
   .contacts {
-  position: relative;
+    position: relative;
   }
 }
 
@@ -20,7 +20,7 @@
 
 .contacts__container {
   display: flex;
-  padding: 30px 20px;
+  padding: 30px 20px 25px;
   margin: 0 auto;
   box-sizing: border-box;
   width: 320px;
@@ -28,8 +28,8 @@
 
 @media (min-width: $tablet-width) {
   .contacts__container {
-      padding: 64px 30px 56px;
-      width: 768px;
+    padding: 64px 72px 56px;
+    width: 768px;
   }
 }
 
@@ -39,9 +39,10 @@
     z-index: 2;
     box-sizing: border-box;
     width: 570px;
-    padding: 45px 75px 55px;
-    left: 260px;
-    top: 115px;
+    padding: 62px 75px 55px;
+    left: 110px;
+    top: 99px;
+    background-color: rgb(255, 255, 255);
   }
 }
 
@@ -95,7 +96,7 @@
 
 @media (min-width: $desktop-width) {
   .contacts__address {
-  text-align: left;
+    text-align: left;
   }
 }
 
@@ -106,7 +107,7 @@
   background-repeat: no-repeat;
   background-position: center;
   min-width: 320px;
-  height: 365px;
+  height: 362px;
 }
 
 @media (min-width: $tablet-width) {
@@ -122,26 +123,26 @@
   }
 }
 
-@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+@media (min-resolution: $retina-dpi),
+(min-resolution: $retina-dppx) {
   .contacts__map {
-      background-image: url(../img/bg-map-mobile@2x.png);
-      background-size: 100% auto;
+    background-image: url(../img/bg-map-mobile@2x.png);
+    background-size: 100% auto;
   }
 }
 
 @media (min-width: $tablet-width) and (min-resolution: $retina-dpi),
 (min-width: $tablet-width) and (min-resolution: $retina-dppx) {
   .contacts__map {
-      background-image: url(../img/bg-map-tablet@2x.png);
-      background-size: 100% auto;
+    background-image: url(../img/bg-map-tablet@2x.png);
+    background-size: 100% auto;
   }
 }
 
 @media (min-width: $desktop-width) and (min-resolution: $retina-dpi),
 (min-width: $desktop-width) and (min-resolution: $retina-dppx) {
   .contacts__map {
-      background-image: url(../img/bg-map-desktop@2x.png);
-      background-size: 100% auto;
+    background-image: url(../img/bg-map-desktop@2x.png);
+    background-size: 100% auto;
   }
 }
-
