--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -9,7 +9,7 @@
     padding: 0 40px;
     width: 1300px;
     box-sizing: border-box;
-    margin: 0 auto 50px;
+    margin: 0 auto 41px;
   }
 }
 
@@ -26,17 +26,18 @@
 
 @media (min-width: $tablet-width) {
   .form__title {
-      font-size: 60px;
-      line-height: 60px;
-      margin-bottom: 55px;
-      padding: 30px 30px 0;
-      border-top: none;
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 55px;
+    padding-top: 30px;
+    border-top: none;
   }
 }
 
 @media (min-width: $desktop-width) {
   .form__title {
-      margin-bottom: 56px;
+    margin-bottom: 56px;
+    padding-top: 13px;
   }
 }
 
@@ -67,22 +68,26 @@
 
 
 .form__container {
-  padding: 0px 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
   width: 320px;
   box-sizing: border-box;
-  margin: 0 auto;
 }
 
 @media (min-width: $tablet-width) {
   .form__container {
-    padding: 0 30px;
+    padding-left: 30px;
+    padding-right: 30px;
     width: 768px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .form__container {
-    padding: 0 40px;
+    padding-left: 40px;
+    padding-right: 40px;
     width: 1300px;
   }
 }
@@ -126,6 +131,8 @@
     justify-content: space-between;
     align-items: baseline;
     margin-bottom: 43px;
+    padding-right: 0;
+    padding-left: 0;
   }
 }
 
@@ -148,7 +155,7 @@
 }
 
 .form__list--contacts .form__input-text:invalid+.form__input-icon {
-  fill: #ff8282;
+  fill: rgb(255, 130, 130);
 }
 
 @media (min-width: $tablet-width) {
@@ -164,7 +171,7 @@
   .form__list-wrapper .form__list--mass {
     padding-top: 25px;
     padding-left: 65px;
-    padding-bottom: 10px;
+    padding-bottom: 17px;
   }
 }
 
@@ -201,14 +208,14 @@
 
 @media (min-width: $tablet-width) {
   .form__list--contacts .form__label {
-  margin-right: 4px;
+    margin-right: 4px;
   }
 }
 
 
 @media (min-width: $desktop-width) {
   .form__list--contacts .form__item {
-      min-width: 570px;
+    min-width: 570px;
   }
 }
 
@@ -220,15 +227,16 @@
 
 .form__list--additional {
   margin-bottom: 27px;
+  padding-left: 0;
 }
 
 @media (min-width: $tablet-width) {
   .form__list--additional {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 12px;
-  justify-content: space-between;
-  padding-left: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 12px;
+    justify-content: space-between;
+    padding-left: 0;
   }
 }
 
@@ -236,8 +244,8 @@
   .form__list--additional {
     flex-wrap: nowrap;
     justify-content: space-between;
-    margin-bottom: 51px;
-    padding: 0 40px;
+    margin-bottom: 20px;
+    padding: 0;
   }
 }
 
@@ -249,7 +257,7 @@
 
 @media (min-width: $tablet-width) {
   .form__list--additional .form__label {
-    padding-left: 79px;
+    padding-left: 78px;
   }
 }
 
@@ -274,13 +282,12 @@
 @media (min-width: $desktop-width) {
   .form__list--additional .form__item {
     width: 245px;
-    margin: 0;
   }
 }
 
 @media (min-width: $tablet-width) {
   .form__list--additional .form__item:nth-child(even) {
-    margin-right: 0;
+    margin-bottom: 26px;
   }
 }
 
@@ -297,7 +304,7 @@
 
 @media (min-width: $desktop-width) {
   .form__list-border-wrapper {
-     min-width: 570px;
+    min-width: 570px;
   }
 }
 
@@ -350,9 +357,9 @@
 }
 
 @media (min-width: $desktop-width) {
- .form__label {
+  .form__label {
     padding: 9px 0;
-    margin-right: 35px;
+    margin-right: 19px;
   }
 }
 
@@ -389,10 +396,17 @@
 
 @media (min-width: $tablet-width) {
   .form__list .form__label--radio::before {
-  left: -40px;
-  top: 0;
+    top: 0;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .form__list .form__label--radio::before {
+    top: -6px;
+    left: -38px;
+  }
+}
+
 
 
 .form__label--checkbox::before {
@@ -401,7 +415,7 @@
 
 @media (min-width: $tablet-width) {
   .form__label--checkbox::before {
-    left: -11px;
+    left: 0;
     top: -4px;
     width: 40px;
     height: 40px;
@@ -417,9 +431,15 @@
   }
 }
 
+@media (min-width: $desktop-width) {
+  .form__list .form__label--checkbox::before {
+    left: 0;
+  }
+}
+
 @media (min-width: $tablet-width) {
   .form__list--contacts .form__label--email {
-  margin-right: 10px;
+    margin-right: 10px;
   }
 }
 
@@ -461,14 +481,14 @@
     width: 18px;
     height: 18px;
     top: 11px;
-    left: -25px;
+    left: -4px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .form__list .form__input-radio:checked+label::after {
-    top: 11px;
-    left: -25px;
+    top: 6px;
+    left: -26px;
   }
 }
 
@@ -492,7 +512,7 @@
   padding: 13px;
 }
 
-@media (min-width: $tablet-width)  {
+@media (min-width: $tablet-width) {
   .form__textarea {
     min-height: 175px;
     padding: 14px 17px;
@@ -507,22 +527,23 @@
 
 .form__input-text:invalid,
 .form__textarea:invalid {
-  border: 2px solid #ff8282;
-  padding: 11px;
+  border: 2px solid rgb(255, 130, 130);
+  padding: 11px 13px;
   box-shadow: none;
 }
 
 @media (min-width: $tablet-width) {
+
   .form__input-text,
   .form__label {
-      padding: 10px;
+    padding: 10px;
   }
 
   .form__input-text,
   .form__label,
   .form__textarea {
-      font-size: 20px;
-      line-height: 20px;
+    font-size: 20px;
+    line-height: 20px;
   }
 
   .form__input-text:focus,
@@ -534,14 +555,15 @@
 
 
   .form__input-text {
-      padding-left: 18px;
+    padding-left: 18px;
   }
 }
 
 @media (min-width: $desktop-width) {
+
   .form__input-text,
   .form__label {
-      padding: 10px 0;
+    padding: 10px 0;
   }
 }
 
@@ -560,6 +582,7 @@
 }
 
 @media (min-width: $tablet-width) {
+
   .form__textarea:focus,
   .form__textarea:invalid {
     padding: 13px 16px;
@@ -573,15 +596,18 @@
 
 @media (min-width: $tablet-width) {
   .form__input-text--email {
-      padding-left: 18px;
+    padding-left: 18px;
   }
+
   .form__input-text--email:focus,
   .form__input-text--email:invalid {
     padding-left: 17px;
   }
+
   .form__input-text--phone {
-      padding-left: 20px;
+    padding-left: 20px;
   }
+
   .form__input-text--phone:focus,
   .form__input-text--phone:invalid {
     padding-left: 19px;
@@ -620,7 +646,7 @@
 @media (min-width: $desktop-width) {
   .form__legend {
     padding: 0 40px;
-    margin: 0 0 75px;
+    margin: 0 0 75px -43px;
   }
 }
 
@@ -650,7 +676,7 @@
 
 @media (min-width: $desktop-width) {
   .form__comments-wrapper {
-    padding: 0 40px;
+    padding: 0;
     margin-bottom: 53px;
   }
 }
@@ -658,6 +684,8 @@
 .form__fieldset {
   border: 0;
   position: relative;
+  margin: 0 0 5px;
+  padding: 0;
 }
 
 .form__fieldset::after {
@@ -686,6 +714,7 @@
     width: auto;
   }
 }
+
 
 .form__fieldset-button-wrapper {
   padding: 0 20px;
