--- a/source/sass/blocks/gift.scss
+++ b/source/sass/blocks/gift.scss
@@ -6,7 +6,8 @@
   padding-top: 65px;
 }
 
-@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+@media (min-resolution: $retina-dpi),
+(min-resolution: $retina-dppx) {
   .gift {
     background-image: url(../img/gift-photo-mobile@2x.jpg);
     background-size: 280px auto;
@@ -17,7 +18,7 @@
   .gift {
     box-sizing: border-box;
     width: 100%;
-    min-height: 200px;
+    min-height: 201px;
     display: flex;
     padding: 0 90px;
     align-items: center;
@@ -38,7 +39,7 @@
     flex-direction: column;
     width: 245px;
     box-sizing: border-box;
-    padding-top: 65px;
+    padding: 73px 40px 20px 37px;
     background-image: url(../img/gift-photo-desktop@1x.jpg);
   }
 }
@@ -58,7 +59,7 @@
 
 @media (min-width: $tablet-width) {
   .gift__img {
-    margin: 0 auto 0 0;
+    margin: -12px auto 0 0;
   }
 }
 
@@ -80,7 +81,7 @@
 
 @media (min-width: $tablet-width) {
   .gift__content {
-    margin: 0;
+    margin: 0 0 0 auto;
     text-align: left;
     padding-right: 24px;
   }
@@ -92,5 +93,3 @@
     padding-right: 0;
   }
 }
-
-
