--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -23,7 +23,7 @@
 
 .main-nav--opened .main-nav__toggle {
   top: 0;
-  right: 40px;
+  right: 0;
 }
 
 .main-nav--opened .main-nav__toggle::after,
@@ -60,27 +60,20 @@
 
 @media (min-width: $tablet-width) {
   .main-nav__toggle {
-      display: none;
+    display: none;
   }
 }
 
 @media (max-width: 767px) {
+
   .main-nav--closed .main-nav__list,
   .main-nav--nojs .main-nav__toggle {
-      display: block;
+    display: block;
   }
 }
 
 @media (max-width: 767px) {
- .main-nav--nojs .main-nav__list {
-      display: none;
+  .main-nav--nojs .main-nav__list {
+    display: block;
   }
 }
-
-
-
-
-
-
-
-
