--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -3,7 +3,7 @@
 }
 
 .page-footer__container {
-  padding: 0 20px;
+  padding: 8px 20px;
   width: 320px;
   margin: 0 auto;
   display: flex;
@@ -22,7 +22,7 @@
 }
 
 @media (min-width: $desktop-width) {
-  .page-footer__container{
+  .page-footer__container {
     padding: 25px 40px;
     width: 1300px;
   }
