--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -45,7 +45,7 @@
 
 @media (min-width: $tablet-width) {
   .social__link--insta {
-    left: -6px;
+    top: -4px;
   }
 }
 
@@ -57,6 +57,7 @@
 @media (min-width: $tablet-width) {
   .social__link--fb {
     left: -9px;
+    top: -6px;
   }
 }
 
